Fixes overlapping images when logged in as admin

--- a/styleguide/source/assets/scss/02-molecules/_hero-story.scss
+++ b/styleguide/source/assets/scss/02-molecules/_hero-story.scss
@@ -19,7 +19,7 @@
     display: flex;
     flex-flow: column nowrap;
     background: $white;
-    padding: $gutter / 2;
+    padding: $gutter;
   }
 
   &__featured-quote {
