--- a/styleguide/source/assets/scss/03-organisms/_member-feature.scss
+++ b/styleguide/source/assets/scss/03-organisms/_member-feature.scss
@@ -55,7 +55,7 @@
         justify-content: flex-start;
       }
       .ama__hero-story__media {
-        margin-right: $gutter * -8;
+        margin-right: $gutter * -4;
       }
 
       .ama__member-feature-rail {
